--- a/academics.html
+++ b/academics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academics - Brightfield Academy</title>
+    <title>Academics Portal</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -94,7 +94,7 @@
                 <div class="philosophy-text">
                     <div class="section-subtitle">Our Approach to Learning</div>
                     <h2>Academic Philosophy</h2>
-                    <p>At Brightfield Academy, we believe that education should be engaging, challenging, and relevant. Our curriculum is designed to develop critical thinking, creativity, and a lifelong love of learning.</p>
+                    <p>At ISSTSD Inc, we believe that education should be engaging, challenging, and relevant. Our curriculum is designed to develop critical thinking, creativity, and a lifelong love of learning.</p>
                     <p>We maintain small class sizes to ensure personalized attention and create an environment where students feel comfortable taking intellectual risks. Our teachers use a variety of instructional approaches to accommodate different learning styles and help each student reach their full potential.</p>
                     
                     <div class="philosophy-quote">
@@ -712,7 +712,7 @@
                         </h3>
                         <p class="faculty-title">Mathematics Department Chair</p>
                         <p class="faculty-credentials">Ph.D. in Mathematics, MIT</p>
-                        <p class="faculty-bio">Dr. Chen joined Brightfield Academy in 2010. He teaches AP Calculus and leads our Math Olympiad team.</p>
+                        <p class="faculty-bio">Dr. Chen joined ISSTSD Inc in 2010. He teaches AP Calculus and leads our Math Olympiad team.</p>
                         <a href="#" class="faculty-email"><i class="fas fa-envelope"></i> Email</a>
                     </div>
                 </div>
