--- a/blog-post.html
+++ b/blog-post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>It's IS Night: A Spectacular Evening for Student Dance! - Brightfield Academy</title>
+    <title>It's IS Night: A Spectacular Evening for Student Dance!/title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="blog-post.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
